git: restrict diff views' shortcut context

BUG: 473639
FIXED-IN: 5.13.231200